@startuml internet_tv
!define fk FOREIGN_KEY
' 複数のチャンネル
entity "channels"{
  *channel_id:int(10)
  --
  channel_name:varchar(100)
}
' 番組表
entity "program_list"{
  *program_id:bigint(20)
  channel_id:int(10){fk}
  --
  program_list_title:varchar(100)
  episode_id:bigint(20){fk}
  start_datetime:datetime
  end_datetime:datetime
  program_list_info:varchar(255)
  program_list_views:int(10)
}
' 複数のシリーズ
entity "series"{
  *series_id:bigint(20)
  --
  series_title:varchar(100)
}
' 複数のシーズン
entity "seasons"{
  *season_id:bigint(20)
  series_id:bigint(20){fk}
  --
  season_num:int(2)
  season_title:varchar(100)
}
' 複数のエピソード
entity "episodes"{
  *episode_id:bigint(20)
  season_id::bigint(20){fk}
  --
  episode_title:varchar(100)
  episode_num:int(4)
  playback_time:time
  release_date:date
  episode_info:varchar(255)
  episode_views:int(10)
  file_path:varchar(255)
}
' 複数のジャンル
entity "genres"{
  *genre_id:int(4)
  --
  genre_name:varchar(50)
}
' 一つの番組は複数のジャンルに属するのを表現する
entity "program_genres"{
  *program_genres_id:bigint(20)
  --
  genre_id:int(4){fk}
  program_id:bigint(10){fk}
}

' リレーションシップを明示する
channels ||--o{ program_list
episodes ||--o{ program_list
series   ||--|{ seasons
seasons  ||--|{ episodes
program_genres ||--|{ genres
program_genres ||--|{ program_list
@enduml
